--- a/Customer-due-diligence-Service/src/main/resources/bootstrap.properties
+++ b/Customer-due-diligence-Service/src/main/resources/bootstrap.properties
@@ -12,7 +12,8 @@ spring.datasource.data-password=
 spring.datasource.driver-class-name=org.h2.Driver
 #spring.datasource.data=classpath*:data.sql
 
-
+#spring.security.user.name=ram
+#spring.security.user.password=ram@6
 #spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
 spring.jpa.hibernate.ddl-auto=none
@@ -21,5 +22,6 @@ spring.zipkin.base-url=http://localhost:9411
 spring.cloud.config.uri=http://localhost:8888
 #spring.profiles.active=dev
 
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=10000
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=500000
+#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=10000
 spring.sleuth.sampler.probability=1
